Fix: i18n key with header z-index

--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -3,7 +3,6 @@
   background-color: var(--background-color);
   position: sticky;
   top: 0;
-  z-index: 1000;
   padding-top: 1rem;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
